Display transactions sum using all decimal places

For a sum of multiple rows selected in the global ledger view, use the
automatically determined minimum required precision to avoid truncating
the value

BUG: 420593